Created desktop header which includes logo, nav bar/links, search bar and action bar

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
             </nav>
         </div>
 
+
         <div class="search-bar-container">
-            <button class="search-icon">
+            <div class="search-icon">
                 <span class="material-symbols-outlined search-logo">search</span>
-            </button>
+            </div>
             <input placeholder="Search" class="search-bar"></input>
         </div>
 
