Created the latest category with responsiveness.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 </head>
 <body>
     <div class="top-area">
@@ -60,7 +61,6 @@
     <main>
         <div class="sale-top">
             <div class="sale-updates">New Styles On Sale: Up To 40% Off</div>
-            <!-- <div class="sale-link">Shop All Our New Markdowns</div> -->
             <a class="sale-link" href="#">Shop All Our New Markdowns</a>
         </div>
 
@@ -81,6 +81,28 @@
             <p class="text4">collection features running shoes and apparel built for speed.</p>
             <button class="button1">Shop</button>
         </div>
+
+        <div class="collection-section1">
+            <div class="section1-heading">The Latest</div>
+        </div>
+
+        <div class="latest-inner-container">
+            <img class="latest-image1" src="images/latest/3.png" alt="Latest image 1">
+            <img class="latest-image2" src="images/latest/4.png" alt="Latest image 2">
+        </div>
+
+
+        <div class="collection-section2">
+            <div class="section1-heading">Featured</div>
+        </div>
+
+        <div class="featured-container">
+            <img class="featured-image1" src="images/featured/1.png" alt="Latest image 1">
+            <img class="featured-image2" src="images/featured/2.png" alt="Latest image 2">
+            <img class="featured-image3" src="images/featured/3.png" alt="Latest image 2">
+            <img class="featured-image4" src="images/featured/4.png" alt="Latest image 2">
+        </div>
+
     </main>
     <footer></footer>
 </body>
