Made all the containers and footer for desktop, tablet and mobile view.

--- a/index.html
+++ b/index.html
@@ -93,15 +93,113 @@
 
 
         <div class="collection-section2">
-            <div class="section1-heading">Featured</div>
+            <div class="section2-heading">Featured</div>
         </div>
 
         <div class="featured-container">
-            <img class="featured-image1" src="images/featured/1.png" alt="Latest image 1">
-            <img class="featured-image2" src="images/featured/2.png" alt="Latest image 2">
-            <img class="featured-image3" src="images/featured/3.png" alt="Latest image 2">
-            <img class="featured-image4" src="images/featured/4.png" alt="Latest image 2">
+            <img class="featured-image" src="images/category/1.png" alt="Latest image 1">
+            <img class="featured-image" src="images/category/2.png" alt="Latest image 2">
+            <img class="featured-image" src="images/category/3.png" alt="Latest image 2">
+            <img class="featured-image" src="images/category/4.png" alt="Latest image 2">
         </div>
+
+        <div class="collection-section3">
+            <div class="section3-heading">Don't Miss</div>
+        </div>
+
+        <div class="dont-miss-container">
+            <img class="miss1" src="images/latest/1.png" alt="don't miss 1">
+            <img class="miss2" src="images/latest/2.png" alt="don't miss 2">
+        </div>
+
+
+        <div class="main-heading-text">
+            <p class="text1">Women's Air Jordan Collection</p>
+
+           <p class="text2"> SHOW EM UP</p>
+            <p class="text3">Crafted for your flyest self, the new Air Jordan Collection</p>
+            <p class="text4"> brings iconic prints and elevated cuts.</p>
+            <button class="button1">Shop</button>
+        </div>
+
+        <div class="collection-section4">
+            <div class="section4-heading">Shop by Icons</div>
+        </div>
+
+        <div class="shop-by-icon-container">
+            <img class="shop-image" src="images/shop/1.png" alt="image 1">
+            <img class="shop-image" src="images/shop/2.png" alt="image 2">
+            <img class="shop-image" src="images/shop/3.png" alt="image 3">
+            <img class="shop-image" src="images/shop/4.png" alt="image 4">
+            <img class="shop-image" src="images/shop/5.png" alt="image 5">
+            <img class="shop-image" src="images/shop/6.png" alt="image 6">
+            <img class="shop-image" src="images/shop/7.png" alt="image 7">
+            <img class="shop-image" src="images/shop/8.png" alt="image 8">
+            <img class="shop-image" src="images/shop/9.png" alt="image 9">
+            <img class="shop-image" src="images/shop/10.png" alt="image 10">
+        </div>
+
+        <div class="collection-section5">
+            <div class="section5-heading">Shop by Sports</div>
+        </div>
+       
+
+        <div class="shop-by-sports">
+            <img class="sports-image" src="images/sports/1.png" alt="image 1">
+            <img class="sports-image" src="images/sports/2.png" alt="image 2">
+            <img class="sports-image" src="images/sports/3.png" alt="image 3">
+            <img class="sports-image" src="images/sports/4.png" alt="image 4">
+            <img class="sports-image" src="images/sports/5.png" alt="image 5">
+            <img class="sports-image" src="images/sports/6.png" alt="image 6">
+            <img class="sports-image" src="images/sports/7.png" alt="image 7">
+            <img class="sports-image" src="images/sports/8.png" alt="image 8">
+        </div>
+
+        <hr class="line">
+
+        <div class="footer-container">
+            <div class="flex-column">
+            <div class="footer">
+                <div class="footer-header">Resources</div>
+                <a href="#">Find A Store</a>
+                <a href="#">Become A Member</a>
+                <a href="#">Running Shoe Finder</a>
+                <a href="#">Product Advice</a>
+                <a href="#">Send Us Feedback</a>
+            </div>
+            <div class="footer">
+                <div class="footer-header">Help</div>
+                <a href="#">Get Help</a>
+                <a href="#">Order Status</a>
+                <a href="#">Delivery</a>
+                <a href="#">Returns</a>
+                <a href="#">Payment Options</a>
+                <a href="#">Contact Us On Nike.com Inquiries</a>
+                <a href="#">Contact Us On All Other Inquiries</a>
+            </div>
+            <div class="footer">
+                <div class="footer-header">Company</div>
+                <a href="#">About Nike</a>
+                <a href="#">News</a>
+                <a href="#">Careers</a>
+                <a href="#">Investors</a>
+                <a href="#">Sustainability</a>
+                <a href="#">Impact</a>
+                <a href="#">Report a Concern</a>
+            </div>
+
+            <div class="india"><span class="material-symbols-outlined language-logo">language</span>India</div>
+        </div>
+        </div>
+
+        <div class="copyright">
+            <p class="copyright-text">© 2025 Nike, Inc. All rights reserved</p>
+        </div>
+
+        <div class="india-guide">
+            <span class="material-symbols-outlined language-logo">language</span>India
+        </div>
+
 
     </main>
     <footer></footer>
