Modified to get proper images from the required folder.

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         </div>
 
         <div class="dont-miss-container">
-            <img class="miss1" src="images/latest/1.png" alt="don't miss 1">
-            <img class="miss2" src="images/latest/2.png" alt="don't miss 2">
+            <img class="miss1" src="images/don't miss/1.png" alt="don't miss 1">
+            <img class="miss2" src="images/don't miss/2.png" alt="don't miss 2">
         </div>
 
 
